# Chess-Peace

./: CHANGELOG.md  Chess-Peace.cabal
app/: Main.hs
app/Render/: Render.hs  Window.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.0.2/: Chess-Peace-0.1.0.0-inplace.conf  package.cache
