cabal-version:      2.4
name:               Chess-Peace
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             FunkyCosmonaut
maintainer:         FunkyCosmonaut@protonmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable Chess-Peace
    main-is:          Main.hs
    other-modules: Render.Window

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.0.0
                      , GLUT
    hs-source-dirs:   app
    default-language: Haskell2010

library
    
    exposed-modules:    Render.Render
    hs-source-dirs:     app
                        , app/Render

    build-depends:      base ^>=4.16.0.0
                        , GLUT
    default-language:   Haskell2010
